--- a/experiments/exp9.html
+++ b/experiments/exp9.html
@@ -21,6 +21,12 @@
       display: grid; 
       grid-template-columns: repeat(4, 1fr); 
       gap: 20px;} 
+      .grid-item {
+        border: 1px solid #ccc; 
+        padding: 10px; 
+        text-align: center;
+      }
+
     
 
         .card {
