--- a/experiments/experiment10.html
+++ b/experiments/experiment10.html
@@ -49,8 +49,9 @@
             <li><a href = "#">CONTACTS</a></li>
         </ul>
     </nav>
+    <h1>welcome to shopease</h1>
    <div> <bold>NAME: MRITYUNJAY JAISWAL</bold>
-    <BOLD>ADD NO: 2025B01010643</BOLD>
+    <br><BOLD>ADD NO: 2025B01010643</BOLD><br>
     <BOLD>BATCH: CSE-21</BOLD>
     </div>
 </body>
