--- a/experiments/EXPERIMENT6.HTML
+++ b/experiments/EXPERIMENT6.HTML
@@ -96,7 +96,7 @@
     <div class="header">ShopEasy</div>
 
     <div class="product">
-      <img src="tshirt.png" alt="T-Shirt">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQs9d5-0oIW2LDPi6sBzJTAZTlfjIUbyS0gUg&s" alt="T-Shirt">
       <div class="product-content">
         <h3>Classic Cotton T-Shirt</h3>
         <p>Soft, breathable cotton. Regular fit. Available in multiple colors.</p>
