--- a/experiments/experiment10.html
+++ b/experiments/experiment10.html
@@ -34,11 +34,13 @@
         color: goldenrod;
         border-bottom: 1px goldenrod;
         } 
+        \
     </style>
 </head>
 <body>
     <nav>
         <ul>
+            <h1><a href = "index.html">SHOPEASE</a></h1>
             <li><a href = "index.html">HOME</a></li>
             <li><a href = "#">ADMISSION</a></li>
             <li><a href = "#">ACADEMICS</a></li>
