--- a/experiments/experiment2.html
+++ b/experiments/experiment2.html
@@ -5,45 +5,22 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>news webpage</title>
 </head>
-<h1 align="center"><B>BIHAR ELECTION NEWS</B></h1>
+<h1><B>BBC LIVE NEWS UPDATES</B></h1>
 <body>
- <img src="https://images.indianexpress.com/2025/10/WhatsApp-Image-2025-10-13-at-10.58.48-
-AM.jpeg?w=640"
- alt="Bihar elections live updates" width="640" height="360">
- <p align="center">
- <h2>Bihar Assembly Election 2025 Live Updates: Prashant Kishor’s Jan Suraaj Party (JSP) has 
-announced the its second
- list of candidates for 65 seats for the upcoming Bihar polls. However, Kishor’s name is not on 
-this list. Last
- week, JSP announced the first list of candidates with 51 names for the state’s 243-member 
-Assembly.</h2>
- <br>
- <h2>BJP to release candidate list today: The Bharatiya Janata Party (BJP) Bihar chief said that 
-NDA will announce
- its candidates for Bihar polls on Monday evening. On the other hand, Congress is yet to finaliseseat sharing.
- Party leader Shakeel Ahmad Khan Sunday reaffirmed that the Mahagathbandhan was united and 
-confident of ousting
- the ruling NDA in Bihar. The last date for filing nominations for the first phase of polling is 
-October 17.</h2>
- <br>
- <h2>First phase voting on November 6: The first phase of the Bihar Assembly elections will take 
-place on November 6,
- with the second phase of voting on November 11. More than 7.4 crore electors of the state will 
-cast their votes.
- The counting of votes will take place on November 14.</h2>
- </p>
- <iframe width="560" height="315" 
-src="https://www.youtube.com/embed/8nkGYEMNMrc?si=zTPhzRl6D3isO32Z"
- title="YouTube video player" frameborder="0"
- allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
-web-share"
- referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
- <a href="https://indianexpress.com/article/india/bihar-assembly-election-2025-live-updatescongress-to-announce-bihar-seat-sharing-plan-after-meeting-with-allies-asserts-mahagathbandhanunity-10303568/"
- align="center">
- <h3>for more information visit indian express</h3>
- </a>
- <a href="https://www.youtube.com/watch?v=Mr7mtexYDHw" align="center">
- <h3>news from india today channel</h3>
- </a>
+ <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROylR5JWDyKKQXkmMAlTPStx1BtPrq0HgKiA&s"
+ alt="BBC LIVE NEWS UPDATE" width="500" height="250">
+
+ <div><video width="300" height="250" controls>
+  <source src="C:\Users\mrity\OneDrive\Desktop\WhatsApp Video 2026-01-09 at 00.17.26.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+ </video></div>
+    <div>
+ <audio controls autoplay>
+  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+    </audio> </div>
+ <P>NAME: MRITYUNJAY JAISWAL</P>
+ <P>BATCH: CSE21</P>
+ <P>ADD.NO.: 2025B01010643</P>
 </body>
 </html>
